<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:weightSum="100">

        <!-- list name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/uid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:clickable="true"
                android:gravity="center"
                android:hint="@string/enter_list_name"
                android:inputType="text"
                android:maxLines="1" />

        </LinearLayout>


        <!--  priority: text, Linear(img1, img2, img3)  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:gravity="center_vertical"
                android:text="@string/priority"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="70"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageButton
                    android:id="@+id/newList_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/low_priority"

                    android:onClick="priorityLowPressed"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/green_priority_btn" />

                <ImageButton
                    android:id="@+id/newList_yellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/medium_priority"
                    android:onClick="priorityNormalPressed"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/yellow_priority_btn" />

                <ImageButton
                    android:id="@+id/newList_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="34"
                    android:background="@android:color/transparent"

                    android:contentDescription="@string/high_priority"
                    android:hapticFeedbackEnabled="false"
                    android:onClick="priorityHighPressed"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/red_priority_btn" />
            </LinearLayout>


        </LinearLayout>





        <!--     Delete list:  Delete, X button below it.-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/save_list"
                    android:textSize="17sp" />

                <ImageButton
                    android:id="@+id/save_list_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:srcCompat="@android:drawable/ic_menu_save" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/delete_list"
                    android:textSize="17sp" />

                <ImageButton
                    android:id="@+id/not_create_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:onClick="notCreateList"
                    app:srcCompat="@android:drawable/ic_menu_delete" />


            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>

